# redditpraw

./: pyproject.toml
redditpraw/: listSaved.json  run.py
tests/: test_redditpraw.py
